--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>IceBreakers</title>
-
+    <link href="style.css" rel="stylesheet">
   </head>
+
+
   <body>
+
     <header>
       <nav>
         <ul>
@@ -16,23 +19,36 @@
           </li>
         </ul>
       </nav>
+
+
       <h3><a href="/">Icebreakers</a></h3>
     </header>
+
+
     <main>
+
       <div>
         <h1>Break the Ice!</h1>
         <p>Get to know your teammates, friends, study buddies, or anyone else with some fun web-based, video or text, icebreakers!</p>
       </div>
-      <div>            
+
+
+      <div>
         <h4>What superpower would you want to have and why?</h4>
         <p><a href="#">Make an Icebreaker</a></p>
-        
+
         <h4>What olympic sport would you compete in and why?</h4>
         <p><a href="#">Make an Icebreaker</a></p>
       </div>
+
+
     </main>
+
+
     <footer>
       <p>&copy; Flatiron School 2017</p>
     </footer>
+
+
   </body>
 </HTML>
